feat: implementation app navbar

--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Litverse</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="icon" type="image/x-icon" href="assets/icons/icon.svg">
 </head>
 <body>
     <header class="navbar">
-        <span class="menu"></span>    
-        <img src="assets/icons/icon_original.svg" alt="Litverse icon">
-        <a href="#"><img src="assets/icons/bookshelf.svg" alt="bookshelf"></a>
-        <a href="#"><img src="assets/icons/user.svg" alt="user profile"></a>
+        <div class="container">
+            <span class="menu-hamburger container-image"></span>    
+            <img src="assets/icons/icon_black.svg" alt="Litverse icon" class="container-image icon">
+            <h1>Litverse</h1>
+        </div>
+        <div class="container">
+            <a href="#"><img src="assets/icons/bookshelf.svg" alt="bookshelf" class="container-image"></a>
+            <a href="#"><img src="assets/icons/user.svg" alt="user profile" class="container-image"></a>
+        </div>
     </header>
-    <h1>Litverse</h1>
 </body>
 </html>
