--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="global.css">
     <link rel="icon" type="image/x-icon" href="assets/icons/icon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
         <div class="container">
-            <span class="menu-hamburger container-image"></span>    
+            <input type="checkbox" name="" id="menu" class="button-container">
+            <label for="menu">
+                <span class="menu-hamburger container-image"></span>    
+            </label>
+            <ul class="menu-list">
+                <li class="menu-list-item"><a href="#">Home</a></li>
+                <li class="menu-list-item"><a href="#">Discover</a></li>
+                <li class="menu-list-item"><a href="#">Groups</a></li>
+                <li class="menu-list-item"><a href="#">Help</a></li>
+            </ul>
             <img src="assets/icons/icon_black.svg" alt="Litverse icon" class="container-image icon">
             <h1>Litverse</h1>
         </div>
