feat: initial work banner section mobile

--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
                 <li class="menu-list-item"><a href="#">Help</a></li>
             </ul>
             <img src="assets/icons/icon_black.svg" alt="Litverse icon" class="container-image icon">
-            <h1>Litverse</h1>
         </div>
         <div class="container">
+            <a href="#"><img src="assets/icons/heart.svg" alt="bookshelf" class="container-image"></a>
             <a href="#"><img src="assets/icons/bookshelf.svg" alt="bookshelf" class="container-image"></a>
             <a href="#"><img src="assets/icons/user.svg" alt="user profile" class="container-image"></a>
         </div>
     </header>
+    <section class="banner">
+        <h2 class="title">Já sabe por onde começar?</h2>
+        <p class="text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+        <input type="search" class="search" placeholder="Qual será sua próxima leitura?">
+    </section>
 </body>
 </html>
